<resources>
    <string name="app_name">Xenoblade Chronicles</string>
    <string name="area_colony_9">Colony 9</string>
    <string name="area_tephra_cave">Tephra Cave</string>
    <string name="area_bionis_leg">Bionis\' Leg</string>
    <string name="area_colony_6">Colony 6</string>
    <string name="area_satorl_marsh">Satorl Marsh</string>
    <string name="area_bionis_interior">Bionis Interior</string>
    <string name="area_makna_forest">Makna Forest</string>
    <string name="area_eryth_sea">Eryth Sea</string>
    <string name="area_alcamoth">Alcamoth</string>
    <string name="area_high_entia_tomb">High Entia Tomb</string>
    <string name="area_valak_mountain">Valak Mountain</string>
    <string name="area_sword_valley">Sword Valley</string>
    <string name="area_galahad_fortress">Galahad Fortress</string>
    <string name="area_fallen_arm">Fallen Arm</string>
    <string name="area_mechonis_field">Mechonis Field</string>
    <string name="area_central_factory">Central Factory</string>
    <string name="area_agniratha">Agniratha</string>
    <string name="area_prison_island">Prison Island</string>
    <string name="desc_mark_defeated">Mark as defeated</string>
    <string name="desc_earth">Earth</string>
    <string name="empty_unique_monsters">Explore the vast world of Xenoblade to find and slay all unique monsters !</string>
    <string name="action_level">Your level</string>
    <string name="input_party_level">Enter your party\'s level</string>
    <string name="validate">Validate</string>
    <string name="cancel">Cancel</string>
    <string name="hint_unique_name">Monster\'s unique name</string>
    <string name="hint_level">Level</string>
    <string name="hint_kind">Kind</string>
    <string name="action_sort">Sorting</string>
    <string name="sorting_by_name">By name</string>
    <string name="sorting_by_level">By level</string>
    <string name="action_save">Save</string>
    <string name="hint_area">Approximate location in this area</string>
    <string name="hint_zone">Encounter zone</string>
    <string name="action_delete">Delete</string>
    <string name="area_ether_mine">Ether mine</string>
    <string name="sorting_by_area">By area</string>

</resources>
