<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24dp"
        android:orderInCategory="1"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sorting_alpha"
                    android:title="@string/sorting_by_name"
                    android:checkable="true"
                    android:checked="true"/>
                <item
                    android:id="@+id/sorting_level"
                    android:title="@string/sorting_by_level"
                    android:checkable="true"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_level"
        android:icon="@drawable/ic_group_24dp"
        android:orderInCategory="10"
        android:title="@string/action_level"
        app:showAsAction="ifRoom"/>

</menu>