<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/parent"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minWidth="360dp"
              android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize">

            <EditText
                android:id="@+id/input_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:ems="3"
                android:gravity="center_horizontal"
                android:hint="@string/hint_level"
                android:inputType="number"
                tools:text="120">
            </EditText>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wrapper_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_unique_name"
                android:inputType="text|textCapSentences"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:text="Abaasy l'Avalanche"/>
        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <AutoCompleteTextView
                android:id="@+id/input_kind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="2"
                android:hint="@string/hint_kind"
                android:inputType="textCapSentences"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/input_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:prompt="@string/hint_zone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_area"
                android:inputType="textCapSentences|textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_save"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        </androidx.appcompat.widget.ButtonBarLayout>

    </LinearLayout>

</LinearLayout>